# eduGPT

./: .gitignore  README.md
backend/chat/: GPTv2.py  main.py  pyproject.toml  requirements.txt
backend/chat/memory_manager/: LTM.py  STM.py  __init__.py
backend/chat/tools/: __init__.py  summary.py  weather.py
backend/img_rag/: app.py  serpapi_image_search.py
digital-timezone-clock/: README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Calendar.css  CalendarPanel.tsx  DynamicIsland.css  DynamicIsland.tsx  MainContent.tsx  RightPanel.tsx  Sidebar.tsx  speechToText.tsx
frontend/src/components/visualizers/: AVLVisualizer.css  AVLVisualizer.tsx  FCFSVisualizer.tsx  RoundRobinVisualizer.css  RoundRobinVisualizer.tsx
frontend/src/context/: ChatContext.tsx  NotificationContext.tsx
frontend/src/pages/: Home.css  Home.tsx  Login.css  Login.tsx
frontend/src/styles/: MainContent.css
frontend/src/types/: chat.ts
